# liveweb

./: .dockerignore  Dockerfile  env.py  eval.py  infer.py  pyproject.toml  request_logger.py  requirements.txt
.claude/: audit-loop-prompt.md  settings.local.json
_affinetes/: server.py
liveweb_arena/: __init__.py
liveweb_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
liveweb_arena/core/: __init__.py  agent_loop.py  agent_protocol.py  block_patterns.py  browser.py  cache.py  ground_truth_trigger.py  gt_collector.py  interceptor.py  models.py  parser.py  reward.py  task_manager.py  task_registry.py
liveweb_arena/core/validators/: __init__.py  base.py  llm_validator.py  validators.py
liveweb_arena/plugins/: __init__.py  base.py  base_client.py
liveweb_arena/plugins/coingecko/: __init__.py  api_client.py  coingecko.py
liveweb_arena/plugins/hackernews/: __init__.py  api_client.py  hackernews.py
liveweb_arena/plugins/hybrid/: __init__.py  hybrid.py  utils.py
liveweb_arena/plugins/openlibrary/: __init__.py  api_client.py  openlibrary.py
liveweb_arena/plugins/stooq/: __init__.py  api_client.py  stooq.py
liveweb_arena/plugins/taostats/: __init__.py  api_client.py  taostats.py
liveweb_arena/plugins/weather/: __init__.py  api_client.py  weather.py
liveweb_arena/utils/: __init__.py  llm_client.py  logger.py
tests/core/: test_agent_protocol.py  test_browser.py  test_cache.py  test_content_utils.py  test_ground_truth_trigger.py  test_gt_collector.py  test_interceptor.py  test_parser.py  test_reward.py  test_task_registry.py
(+59 files in other folders)
